Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2562

QmlObserver prints QPainter errors

    XMLWordPrintable

Details

    •  878f146edec1d14610cd8fc0e2a1d894bce2e19d

    Description

      Launching QmlObserver on Mac OS X results in lots of warnings:

      Starting /Users/kkoehne/dev/qt/qt-4.7/qtc-qmlobserver/QMLObserver.app/Contents/MacOS/QMLObserver /Users/kkoehne/dev/tmp/qmlproject/qmlproject.qml
      QPainter::begin: Paint device returned engine == 0, type: 3
      QPainter::setCompositionMode: Painter not active
      QPainter::begin: Paint device returned engine == 0, type: 3
      QPainter::setCompositionMode: Painter not active
      QPainter::begin: Paint device returned engine == 0, type: 3
      QPainter::setCompositionMode: Painter not active
      QPainter::begin: Paint device returned engine == 0, type: 3
      QPainter::setCompositionMode: Painter not active
      QPainter::begin: Paint device returned engine == 0, type: 3
      QPainter::setCompositionMode: Painter not active
      QPainter::begin: Paint device returned engine == 0, type: 3
      QPainter::setCompositionMode: Painter not active
      /Users/kkoehne/dev/qt/qt-4.7/qtc-qmlobserver/QMLObserver.app/Contents/MacOS/QMLObserver exited with code 0
      

      Stacktrace:

      0	QPainter::begin	qpainter.cpp	1773	0x7ffff57f0f48	
      1	QPainter	qpainter.cpp	1491	0x7ffff57efdac	
      2	tintImage	crumblepath.cpp	86	0x43cb63	
      3	CrumblePathButton::tintImages	crumblepath.cpp	194	0x43dc0d	
      4	CrumblePathButton	crumblepath.cpp	160	0x43d66b	
      5	CrumblePath::pushElement	crumblepath.cpp	278	0x43e5ca	
      6	CrumblePath::qt_metacall	moc_crumblepath.cpp	86	0x46d40c	
      7	QMetaObject::metacall	qmetaobject.cpp	237	0x7ffff6ab709f	
      8	QMetaObject::activate	qobject.cpp	3272	0x7ffff6ace41e	
      9	QmlJSDebugger::QDeclarativeViewObserver::inspectorContextPushed	moc_qdeclarativeviewobserver.cpp	235	0x469497	
      10	QmlJSDebugger::QDeclarativeViewObserver::qt_metacall	moc_qdeclarativeviewobserver.cpp	139	0x468f5d	
      11	QMetaObject::metacall	qmetaobject.cpp	237	0x7ffff6ab709f	
      12	QMetaObject::activate	qobject.cpp	3272	0x7ffff6ace41e	
      13	QmlJSDebugger::SubcomponentEditorTool::contextPushed	moc_subcomponenteditortool.cpp	118	0x46dc1f	
      14	QmlJSDebugger::SubcomponentEditorTool::pushContext	subcomponenteditortool.cpp	229	0x45a9b0	
      15	QmlJSDebugger::QDeclarativeViewObserverPrivate::_q_onStatusChanged	qdeclarativeviewobserver.cpp	700	0x46833c	
      16	QmlJSDebugger::QDeclarativeViewObserver::qt_metacall	moc_qdeclarativeviewobserver.cpp	150	0x46908e	
      17	QMetaObject::metacall	qmetaobject.cpp	237	0x7ffff6ab709f	
      18	QMetaObject::activate	qobject.cpp	3272	0x7ffff6ace41e	
      19	QDeclarativeView::statusChanged	moc_qdeclarativeview.cpp	154	0x7ffff7763598	
      20	QDeclarativeView::continueExecute	qdeclarativeview.cpp	548	0x7ffff7502ab4	
      21	QDeclarativeViewPrivate::execute	qdeclarativeview.cpp	175	0x7ffff75015b9	
      22	QDeclarativeView::setSource	qdeclarativeview.cpp	324	0x7ffff7501d3e	
      23	QDeclarativeViewer::open	qmlruntime.cpp	1197	0x42211e	
      24	QDeclarativeViewer::openFile	qmlruntime.cpp	1086	0x420bb0	
      25	QDeclarativeViewer::qt_metacall	moc_qmlruntime.cpp	125	0x46ba2d	
      26	QMetaObject::metacall	qmetaobject.cpp	237	0x7ffff6ab709f	
      27	QMetaObject::activate	qobject.cpp	3272	0x7ffff6ace41e	
      28	QAction::triggered	moc_qaction.cpp	263	0x7ffff55fadf6	
      29	QAction::activate	qaction.cpp	1257	0x7ffff55fa09e	
      30	QMenuPrivate::activateCausedStack	qmenu.cpp	993	0x7ffff5bd9932	
      31	QMenuPrivate::activateAction	qmenu.cpp	1085	0x7ffff5bd9e25	
      32	QMenu::mouseReleaseEvent	qmenu.cpp	2301	0x7ffff5bde646	
      33	QWidget::event	qwidget.cpp	8200	0x7ffff568220b	
      34	QMenu::event	qmenu.cpp	2410	0x7ffff5bded7a	
      35	QApplicationPrivate::notify_helper	qapplication.cpp	4451	0x7ffff560c802	
      36	QApplication::notify	qapplication.cpp	4012	0x7ffff560a6e7	
      37	QCoreApplication::notifyInternal	qcoreapplication.cpp	732	0x7ffff6aae62c	
      38	QCoreApplication::sendSpontaneousEvent	qcoreapplication.h	218	0x7ffff560f6ef	
      39	QApplicationPrivate::sendMouseEvent	qapplication.cpp	3109	0x7ffff5608e73	
      40	QETWidget::translateMouseEvent	qapplication_x11.cpp	4371	0x7ffff56bffb4	
      41	QApplication::x11ProcessEvent	qapplication_x11.cpp	3441	0x7ffff56bc9c2	
      42	x11EventSourceDispatch	qguieventdispatcher_glib.cpp	146	0x7ffff56f847d	
      43	g_main_context_dispatch	/lib/libglib-2.0.so.0	0	0x7ffff28cc8c2	
      44	??	/lib/libglib-2.0.so.0	0	0x7ffff28d0748	
      45	g_main_context_iteration	/lib/libglib-2.0.so.0	0	0x7ffff28d08fc	
      46	QEventDispatcherGlib::processEvents	qeventdispatcher_glib.cpp	415	0x7ffff6aedad7	
      47	QGuiEventDispatcherGlib::processEvents	qguieventdispatcher_glib.cpp	204	0x7ffff56f8ba0	
      48	QEventLoop::processEvents	qeventloop.cpp	149	0x7ffff6aab62c	
      49	QEventLoop::exec	qeventloop.cpp	201	0x7ffff6aab782	
      50	QCoreApplication::exec	qcoreapplication.cpp	1009	0x7ffff6aaed28	
      51	QApplication::exec	qapplication.cpp	3725	0x7ffff56098da	
      52	main	main.cpp	474	0x442ac1	
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes