QmlObserver: Fix QPainter warnings

The specified images in the resources weren't part of the qmlobserver,
and therefore 'tinting' then resulted in QPainter errors.

Task-number: QTCREATORBUG-2562
Reviewed-by: Lasse Holmstedt