src/plugins/qt4projectmanager/qmlobservertool.cpp
@@ -140,7 +140,11 @@ QString QmlObserverTool::copy(const QString &qtInstallData, QString *errorMessag
           << QLatin1String("content/Browser.qml") << QLatin1String("content/images/folder.png")
           << QLatin1String("content/images/titlebar.png") << QLatin1String("content/images/titlebar.sci")
           << QLatin1String("content/images/up.png")
-          << QLatin1String("LICENSE.LGPL") << QLatin1String("LGPL_EXCEPTION.TXT");
+          << QLatin1String("LICENSE.LGPL") << QLatin1String("LGPL_EXCEPTION.TXT")
+          << QLatin1String("crumblepath.qrc") << QLatin1String("images/crumblepath-segment-end.png")
+          << QLatin1String("images/crumblepath-segment-hover-end.png") << QLatin1String("images/crumblepath-segment-hover.png")
+          << QLatin1String("images/crumblepath-segment-selected-end.png") << QLatin1String("images/crumblepath-segment-selected.png")
+          << QLatin1String("images/crumblepath-segment.png");
 
     QStringList debuggerLibFiles;
     debuggerLibFiles << QLatin1String("jsdebuggeragent.cpp")
@@ -188,6 +192,7 @@ QString QmlObserverTool::copy(const QString &qtInstallData, QString *errorMessag
     // Try to find a writeable directory.
     foreach(const QString &directory, directories) {
         if (!mkpath(directory + QLatin1String("/content/images"), errorMessage)
+            || !mkpath(directory + QLatin1String("/images"), errorMessage)
             || !mkpath(directory + QLatin1String("/qmljsdebugger/editor/images"), errorMessage)
             || !mkpath(directory + QLatin1String("/qmljsdebugger/include"), errorMessage)
             || !mkpath(directory + QLatin1String("/qmljsdebugger/include/qt_private"), errorMessage))
